# pysma

./: .pre-commit-config.yaml  .version  LICENSE  MANIFEST.in  README.md  README_DE.md  example.py  pyproject.toml  requirements_test.txt  setup.cfg  setup.py
doc/: connection.md  faq_DE.md  opentasks.md
pysma/: __init__.py  const.py  const_webconnect.py  definitions.py  definitions_em.py  definitions_ennexos.py  definitions_speedwire.py  definitions_webconnect.py  device.py  device_em.py  device_ennexos.py  device_shm2.py  device_speedwire.py  device_webconnect.py  discovery.py  exceptions.py  helpers.py  sensor.py  smaennexos.py  smaspeedwireem.py  smawebconnect.py  tmp.py
pysma/semp/: RendererStatusPage.py  SEMPhttpd.py  __init__.py  const.py  device.py  semp.xsd  sempxsd.py  ssdp.py
scripts/pysma2mqtt/: README.md  pysma2mqtt.py  requirements.txt
tests/: test_definitions.py  test_em.py  test_ennexos.py  test_sensor.py  test_speedwire.py  test_webconnect.py
tests/testdata/: EVCharger-measurements.json  EVCharger-measurements.json.source  SunnyHomeManager2.json  TripowerX15-deviceinfo.json  TripowerX15-measurements.json  TripowerX15-parameters.json
