# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysma-plus"
version = "0.3.11.7"
description = "Library to interface SMA Devices via Speedwire, WebConnect, EnnexOS and Energy Meter Protocol"
readme = "README.md"
authors = [{ name = "Sven Bursch-Osewold", email = "sb_pysma@bursch.com" },{ name = "Johann Kellerman" , email ="kellerza@gmail.com"} ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>3.3,<4",
    "attrs>18",
    "jmespath<2",
    "dataclasses-struct>0.8",
    "untangle>=1.2.1",
    "pymodbus>=3.6.9",
    "xmlschema>=3.3.0"
]
requires-python = ">=3.9"

#[tool.setuptools]
#include-package-data = true

[tool.setuptools.packages.find]
include = ["pysmaplus*"]
exclude = ["pysma/*"]


[project.urls]
Homepage = "https://github.com/littleyoda/pysma"
